# cognitus-ai

./: desktop.ini
backend/: .env  .gitignore  README.md  config.example.yaml  openapi.json  postman-collection.json  pyproject.toml  pyrightconfig.json
backend/src/: config.py  database.py  main.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
backend/src/cognitus_ai/: config.py  database.py  main.py
backend/src/cognitus_ai/auth/: dependencies.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/src/cognitus_ai/chat/: repository.py  router.py  schemas.py  service.py
backend/src/cognitus_ai/container_sdk/: container.py  repository.py  schemas.py
backend/src/cognitus_ai/files/: repository.py  router.py
backend/src/cognitus_ai/utils/: logging.py  nanoid.py  parse_action.py
backend/src/test/: test_config.py  test_connect.py
backend/workspace/: README.md
container-server/: main.py  pyproject.toml
container-server/container-manager/: README.md  pyproject.toml
container-server/container-manager/src/container-manager/: connections.py  main.py  service.py
container-server/container-manager/src/container_manager/: config.py  connections.py  main.py
container-server/container-manager/src/container_manager/container/: repository.py  router.py  schemas.py  service.py
container-server/container-manager/src/container_manager/envs/: repository.py  router.py  schemas.py  service.py
container-server/container-node/: .dockerignore  README.md  pyproject.toml  pyrightconfig.json
container-server/container-node/dockerfiles/: app.Dockerfile  base.Dockerfile
container-server/container-node/test/: test_notebook.py
container-server/container-node/test_workspace/: code.ipynb
container-server/sdk/: pyproject.toml  pyrightconfig.json
container-server/src/container_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
container-server/src/dockerfiles/: Dockerfile
container-server/src/sdk/: base_notebook_container.py  base_python_env.py  container.py  python_env.py
container-server/src/test/: run_nb_python.py
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  AppLayout.tsx  AppRoutes.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  chats.ts  files.ts
frontend/src/components/: CopyButton.tsx  ImageOutput.tsx  (+5 more)
(+58 files in other folders)
