[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.124.2",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "nanoid>=2.0.0",
    "openai",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "tenacity",
    "uuid6>=2025.0.1",
]
[tool.uv]
package = true
# [tool.uv.sources]
# sdk = { path = "../container-server/sdk", editable = true }
