[project]
name = "container-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuid2>=2.0.1",
    "docker>=7.1.0",
    "fastapi[standard]>=0.124.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "websocket-client>=1.9.0",
]
